<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">货币转换</string>
    <string name="action_settings">Settings</string>
    <string name="convertTip">计算规则：</string>
    <string name="currencyFrom">被转换货币</string>
	<string name="currencyTo">目标货币</string>
	<string name="convertRate">兑换率</string>
	<string name="convertAmt">转换额度</string>
	<string name="submit">提交</string>
	<string name="resultTip">兑换结果</string>
	<string name="returnbtn">返回</string>
	<string name="warnTip">警告：兑换率来自雅虎经济，结果仅供参考！</string>
</resources>
